--- a/artigo/sbc-template.bib
+++ b/artigo/sbc-template.bib
@@ -54,7 +54,7 @@
 
 @article{Geitgey:16,
     tite={Machine Learning is Fun Part 5: Language Translation with Deep Learning and the Magic of Sequences},
-    author={Adam Geitgey},
+    author={Geitgey, Adam},
     year={2016}
 }
 
@@ -150,4 +150,36 @@ url="https://doi.org/10.1023/A:1020499411651"
   pages={311--318},
   year={2002},
   organization={Association for Computational Linguistics}
+}
+
+@ARTICLE {SMT,
+    author = {D. Geer},
+    journal = {Computer},
+    title = {Statistical Machine Translation Gains Respect},
+    year = {2005},
+    volume = {38},
+    number = {10},
+    issn = {0018-9162},
+    pages = {18-21},
+    keywords = {machine translation technology;linguistics;statistical translation systems;translation  technology},
+    doi = {10.1109/MC.2005.353},
+    publisher = {IEEE Computer Society},
+    address = {Los Alamitos, CA, USA},
+    month = {oct}
+}
+
+@INPROCEEDINGS {6516319,
+    author = {M. Rhaman and N. Tarannum},
+    booktitle = {2012 International Conference on Advanced Computer Science Applications and Technologies (ACSAT)},
+    title = {A Rule Based Approach for Implementation of Bangla to English Translation},
+    year = {2012},
+    volume = {},
+    issn = {},
+    pages = {13-18},
+    keywords = {},
+    doi = {10.1109/ACSAT.2012.98},
+    url = {https://doi.ieeecomputersociety.org/10.1109/ACSAT.2012.98},
+    publisher = {IEEE Computer Society},
+    address = {Los Alamitos, CA, USA},
+    month = {nov}
 }
